CHANGES
*******

0.4 (unreleased)
================

- Modify ``setup.py`` to use ``io.open`` instead of ``open`` to
  include the README and the CHANGELOG and hardcode UTF-8 so it works
  on all versions of Python with all default encodings.

0.3 (2014-11-03)
================

- Compatibility fixes for Morepath 0.7.

0.2 (2014-11-01)
================

- Adjustments to work with Morepath 0.4 and later. (long overdue release,
  thanks Denis Krienbühl for helping me find out!)

0.1 (2014-04-08)
================

- Initial public release.