@@ -1,2 +1,2 @@
 # flake8: noqa
-from .main import transaction_app, default_commit_veto
+from .main import TransactionApp, transaction_app, default_commit_veto
